[PhuHV] Refactor and fix bug.